# fwdev

./: .clang-format  .gitignore  LICENSE  code_formater.sh
doc/: debugging.md  homework.md  hwsimul.md  index.md  interrupts.md  readme.md  startup.md  systemcalls.md
source/app/: app.c  app.h
source/hal/: hal.c  hal.h  hal_cpu.c  hal_cpu.h  hal_gps.c  hal_gps.h  hal_uart.c  hal_uart.h
source/port/common/: main.c  port_cpu.c  port_stdout.c
source/port/linux/: port_cpu.c  port_uart.c
source/port/mac/: main.c  port_cpu.c  port_uart.c
source/port/stm32/: port_cpu.c  port_stdout.c
source/utl/: utl_cbf.c  utl_cbf.h  utl_cobs.c  utl_cobs.h  utl_crc16.c  utl_crc16.h  utl_dbg.c  utl_dbg.h  utl_io.c  utl_io.h
source/utl/gps/: CMakeLists.txt  gps.c
source/utl/printf/: utl_printf.c  utl_printf.h  utl_printf_config.h
test/hal/cpu/: CMakeLists.txt  run.sh  test.c
test/hal/gps/: CMakeLists.txt  nmea_test_data.txt  test_gps.c
test/hal/uart/: CMakeLists.txt  create_uarts.sh  test.c
test/hal/utl_dbg/: main.c
test/utl/dbg/: CMakeLists.txt  main.c
